tests/pass/ForLoop.java
package pass;

public class ForLoop {
    public int additionForLoop() {
        int[] cars = {1,2,3};
        int result = 0;
        for ( int car = 0; car < 10; car++) {
             result = car;
        }
        return result;
    }
}
